[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/TESTDUMMYENEMY.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://FiraCode-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/HEARTSPRITE.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.6298, 15.6337 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.6212, 16 )

[sub_resource type="DynamicFont" id=3]
size = 700
use_filter = true
font_data = ExtResource( 3 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 17
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area" type="Area2D" parent="."]
input_pickable = false
collision_layer = 4
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area"]
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 18, 0 )

[node name="LedgeX" type="RayCast2D" parent="."]
cast_to = Vector2( 25, 0 )

[node name="LedgeY" type="RayCast2D" parent="."]
cast_to = Vector2( 28, -25 )

[node name="HealthBar" type="HBoxContainer" parent="."]
visible = false
margin_left = -16.0
margin_top = -27.0
margin_right = 2650.0
margin_bottom = 814.0
rect_scale = Vector2( 0.012, 0.012 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="TextureRect" parent="HealthBar"]
modulate = Color( 1, 0.937255, 0.937255, 1 )
margin_right = 720.0
margin_bottom = 841.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="Hitpoint" type="Label" parent="HealthBar"]
margin_left = 724.0
margin_right = 1984.0
margin_bottom = 841.0
custom_fonts/font = SubResource( 3 )
text = "1/2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthTimer" type="Timer" parent="HealthBar/Hitpoint"]
wait_time = 0.6

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area" to="." method="_on_Enemy_body_entered"]
[connection signal="timeout" from="HealthBar/Hitpoint/HealthTimer" to="." method="_on_HealthTimer_timeout"]
